:bug: Fix Box.Content to stretch its children

--- a/src/components/toolbox/box/box.css
+++ b/src/components/toolbox/box/box.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: stretch;
     width: 100%;
     box-sizing: border-box;
     padding: 20px;
